flexbox does wrong baseline item alignment in columns https://bugs.webkit.org/show_bug.cgi?id=97948

Reviewed by Ojan Vafai.

Source/WebCore:

For columns, baseline alignment should just be flex-start.  We were previously
moving the logical left edge by the ascent.

Test: css3/flexbox/align-baseline.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::alignmentForChild): Map baseline to flex-start for orthogonal children.
(WebCore::RenderFlexibleBox::alignChildren): Add FIXME for bug in baseline alignment.
* rendering/RenderFlexibleBox.h:

LayoutTests:

Update test cases with new baseline alignment for column.

* css3/flexbox/align-baseline-expected.html: Added.
* css3/flexbox/align-baseline.html: Added.
* css3/flexbox/flex-align-baseline-expected.txt:
* css3/flexbox/flex-align-baseline.html:
* css3/flexbox/multiline-align-self.html:


Canonical link: https://commits.webkit.org/116111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130110 268f45cc-cd09-0410-ab3c-d52691b4dbfc